# dandi-annotations

./: .gitignore  API_DOCUMENTATION.md  AUTHENTICATION.md  LICENSE  README.md  create_resource_from_code.py  create_resource_from_yaml.py  environment.yml  external_resources.yaml  progress.md  pyproject.toml  run_tests.py
src/dandiannotations/: __init__.py
src/dandiannotations/external_resources/: external_resources.yaml  external_resources.yaml.backup_20250729_141412  external_resources.yaml.backup_20250729_141416
src/dandiannotations/models/: models.py
src/dandiannotations/pmc_search/: ncbi_api.py  pmc_searcher.py  script.py  test_dandi_detection.py
src/dandiannotations/scripts/: create_resource_from_code.py  create_resource_from_yaml.py  test_model_validation.py
src/dandiannotations/webapp/: __init__.py  app.py
src/dandiannotations/webapp/api/: __init__.py  decorators.py  home_routes.py  responses.py  routes.py  serializers.py  submission_routes.py  validators.py
src/dandiannotations/webapp/config/: moderators.yaml  users.yaml
src/dandiannotations/webapp/data/: __init__.py  filesystem_repository.py  resource_repository.py
src/dandiannotations/webapp/domain/: __init__.py  exceptions.py  models.py
src/dandiannotations/webapp/repositories/: resource_repository.py
src/dandiannotations/webapp/services/: __init__.py  resource_service.py
src/dandiannotations/webapp/static/js/: form.js
src/dandiannotations/webapp/templates/: approve_form.html  base.html  dandiset_resources.html  endorse_form.html  form.html  homepage.html  how_it_works.html  login.html  moderation.html  my_submissions.html  pagination.html  register.html  success.html
src/dandiannotations/webapp/utils/: auth.py  schema_utils.py  submission_handler.py  yaml_handler.py
tests/: __init__.py  test_api_endpoints.py  test_api_integration.py
webapp/: README.md  app.py  requirements.txt  setup.py
webapp/static/css/: style.css
webapp/templates/: form.html
